--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,12 @@
 <h1>{{title}}</h1>
-<app-ejercicios></app-ejercicios>
-<app-empleados></app-empleados>
+<nav>
+  <ul>
+    <li>
+  <a routerLink="/ejercicios">Ejercicios</a>
+</li>
+<li>
+  <a routerLink="/empleados">Empleados</a>
+</li>
+  </ul>
+</nav>
+<router-outlet></router-outlet>
