--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,11 +2,14 @@
 <nav>
   <ul>
     <li>
-  <a routerLink="/ejercicios">Ejercicios</a>
-</li>
-<li>
-  <a routerLink="/empleados">Empleados</a>
-</li>
-  </ul>
+      <a routerLink="/ejercicios">Ejercicios</a>
+    </li>
+    <li>
+      <a routerLink="/empleados">Empleados</a>
+    </li>
+    <li>
+      <a routerLink="/panel">Panel Empleados</a>
+    </li>
+</ul>
 </nav>
 <router-outlet></router-outlet>
