routing de ejercicio con parametro

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,14 +2,15 @@
 <nav>
   <ul>
     <li>
+      <a routerLink="/panel">Panel Ejercicios</a>
+    </li>
+    <li>
       <a routerLink="/ejercicios">Ejercicios</a>
     </li>
     <li>
       <a routerLink="/empleados">Empleados</a>
     </li>
-    <li>
-      <a routerLink="/panel">Panel Empleados</a>
-    </li>
+
 </ul>
 </nav>
 <router-outlet></router-outlet>
