--- a/src/app/ejercicio-detalle/ejercicio-detalle.component.html
+++ b/src/app/ejercicio-detalle/ejercicio-detalle.component.html
@@ -3,3 +3,5 @@
     <div><span>id:</span>{{ ejercicioItem.id }}</div>
     <div><span>name:</span>{{ ejercicioItem.name }}</div>
   </div>
+
+  <button (click)="goBack()">Atras</button>
