--- a/src/app/panel/panel.component.html
+++ b/src/app/panel/panel.component.html
@@ -5,5 +5,5 @@
       <h4>{{ ejercicio.name }}</h4>
     </div>
   </a>
-  <div><p>pruebaaaaa</p></div>
+  <div><p>pruebaaaaa   22222</p></div>
 </div>
